# game-Dec19

./: .gitignore  Cargo.toml  LICENSE  README.md  doc  watch  watch_bench  watch_run  watch_test
assets/animations/: character_0.ron
assets/prefabs/: sprite_animation.ron
assets/sprite_sheets/: character_0.ron  tiles.ron
assets/sprites/: character_01_die_down.kra  character_01_die_downleft.kra  character_01_die_downright.kra  character_01_die_left.kra  character_01_die_right.kra  character_01_die_up.kra  character_01_die_upleft.kra  character_01_die_upright.kra  character_01_walk_down.kra  character_01_walk_downleft.kra  character_01_walk_downright.kra  character_01_walk_left.kra  character_01_walk_right.kra  character_01_walk_up.kra  character_01_walk_upleft.kra  character_01_walk_upright.kra  export
config/: display_config.ron  game_config.ron
src/: lib.rs
src/components/: age.rs  animation.rs  color.rs  creep.rs  map.rs  mod.rs  navigator.rs  path.rs  projectile.rs  tower.rs  velocity.rs
src/config/: debug_draw.rs  map.rs  mod.rs  spawner.rs  tower.rs
src/resources/: animation_id.rs  camera_move.rs  mod.rs  named_sprite_animation.rs  named_sprite_sheet.rs  sprites.rs  zoom.rs
src/states/: loading.rs  mod.rs  running.rs
src/systems/: age.rs  animator.rs  bouncer.rs  bundle.rs  clear_debug.rs  debug_draw.rs  fps_log.rs  heading.rs  map_generator.rs  mod.rs  move_camera.rs  mover.rs  murder.rs  navigator_mover.rs  pathfinder.rs  projectile_mover.rs  spawner.rs  tower_aim.rs  tower_shoot.rs
src/util/: constants.rs  iso.rs  math.rs  mod.rs  spawn.rs  (+1 more)
(+2 files in other folders)
