[package]
name = "game"
version = "0.1.0"
authors = ["Daniel Benjamin <cs2dsb@gmail.com"]
edition = "2018"
default-run = "main"

[dependencies]
amethyst = "0.13.2"
amethyst_config = "0.12.0"
log = { version = "0.4.6", features = ["serde"] }
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4.10"
thread_profiler = { version = "0.3", optional = true }
ndarray = "0.13.0"
regex = "1.3.1"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
profiler = ["amethyst/profiler", "thread_profiler"]

[dev-dependencies]
criterion = "0.2"
amethyst_test = "0.3.0"

[profile.release]
#lto = true
